--- a/app/css/index.css
+++ b/app/css/index.css
@@ -112,9 +112,9 @@ legend .icon-info {
 }
 
 .info table th {
-  font-size: 14px;
+  font-size: 16px;
+  font-weight: normal;
   height: 30px;
-  line-height: 30px;
   border: 1px solid #525252;
   background-color: #cde3f1;
 }
